<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


    <LinearLayout

        android:id="@+id/llItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/ic_launcher"/>

        <TextView
            android:id="@+id/cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/cost"/>


        <TextView
            android:id="@+id/myprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/price"
            />

        <TextView
            android:id="@+id/perWhat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/per"
            />


    </LinearLayout>

    <TextView
        android:id="@+id/Myoperation"
        android:layout_width="match_parent"
        android:layout_height="30dp"

        />

    <LinearLayout

        android:id="@+id/llNegogiate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.14"
            android:text="New Price:"/>

        <EditText
            android:id="@+id/edtNewPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"/>

    </LinearLayout>
          <LinearLayout
            android:id ="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    
      <TextView
        android:id="@+id/howmanytv"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/amount" 
        />
      <EditText
          android:id="@+id/howmany"
           android:layout_width="40dp"
        android:layout_height="30dp"
        android:inputType="numberDecimal"
        android:textSize="12sp"
        android:background="@android:drawable/edit_text"
          />

      <TextView
          android:id="@+id/tvUnits"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
         android:text="@string/units"  />

</LinearLayout>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content" >

              <TextView
                  android:id="@+id/totaltv"
                  android:layout_width="wrap_content"
                  android:layout_height="match_parent"
                  android:text="@string/total" />

              <TextView
                  android:id="@+id/total"
                  android:layout_width="40dp"
                  android:layout_height="match_parent" />

              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="horizontal">
              </LinearLayout>

          </LinearLayout>

    <LinearLayout
            android:id ="@+id/linearLayout4"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

        <Button
            android:id="@+id/btnNegogiate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Negogiate"/>

        <Button
        android:id = "@+id/cancel"
         android:text="@string/cancel" 
         android:layout_width="90dp"
    android:layout_height="wrap_content"
    />
     <Button
        android:id = "@+id/buy"
        android:text="@string/buy" 
          android:layout_width="90dp"
    android:layout_height="wrap_content"
    />
  </LinearLayout>
        

</LinearLayout>
